plugins {
    id "com.diffplug.spotless" version "6.23.3" apply false
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'selesse.java-code-quality-conventions'

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation('junit:junit:4.13')
        testImplementation("org.assertj:assertj-core:3.11.1")
        testImplementation('org.mockito:mockito-core:5.8.0')

        api('org.slf4j:slf4j-api:1.7.32')
        implementation('ch.qos.logback:logback-classic:1.2.10')
        api('com.google.guava:guava:29.0-jre')
        implementation('org.fusesource.jansi:jansi:1.18')
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
            vendor = JvmVendorSpec.ADOPTIUM
        }
    }
}
